--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,8 @@ body {
 
 /*ID's here*/
 
+/* homepage, header & footer here*/
+
 #site {
     margin:0 auto;
     width: 1080px;
@@ -127,6 +129,8 @@ body {
     color: #ffffff;
 }
 
+/*Contact Page*/
+
 #contact{
     display: flex;
     flex-direction: column;
@@ -157,6 +161,42 @@ body {
     margin-left: 500px;
     /*height: 200px; trying to figure out how to make my input box bigger*/  
 }
+
+/*our story here*/
+
+#titleBanner{
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+#aboutUs {
+    margin-top: 75px;
+    display: flex;
+    flex-direction: row;
+}
+
+#story h2 {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-family: 'Cardo', Arial, Helvetica, sans-serif, serif;
+    color: #373435
+}
+
+#story p {
+    margin-left: 75px;
+    margin-top: 20px;
+    font-size: 16px;
+    line-height: 25px;
+    color: #373435
+}
+
+#beerImg {
+    margin-right: 75px;
+ 
+}
+
 
 
 
