--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
     margin-left: 150px;  
 }
 
-#logo{
+.logo{ 
     margin-left: 15px;
     margin-top: 5px
 }
@@ -208,4 +208,15 @@ body {
 
 a:visited{
     text-decoration: none;
+}
+
+.products {
+    margin-top: 25px;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-bottom: 25px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
